--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://abdulwahedsabri1.github.io/saasUi/",
+  "license": "MIT",
   "name": "saas-ui-nextjs-landing-page",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +9,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.1",
@@ -20,12 +24,12 @@
     "@svgr/webpack": "^8.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
-    "next": "^14.2.14",
+    "next": "^15.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "react-remove-scroll": "^2.6.0",
-    "velite": "^0.1.1"
+    "velite": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
@@ -33,7 +37,7 @@
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
-    "eslint": "9.12.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.14",
     "gh-pages": "^6.3.0",
     "prettier": "^3.3.3",
